# VoiceNovel

./: .gitignore  AGENTS.md  README.md  pyproject.toml  start.bat  start.ps1  设计草案.md
docs/: release-smoke.md
docs/design/: 00-product-scope.md  01-system-architecture.md  02-project-store-and-contracts.md  03-processing-pipeline.md  04-book-model-and-memory.md  05-voice-and-gateways.md  06-orchestration-cache-and-takes.md  07-harness-timing-packaging-reader.md  08-cost-policy-export.md  09-mvp-roadmap.md  README.md
integrations/: AGENTS.md
integrations/koodo_voice_plugin/: __init__.py
tests/: conftest.py  test_adaptation.py  test_adaptation_api.py  test_adaptation_backend.py  test_api.py  test_artifact_data_atomic.py  test_audio_take_cache.py  test_cache_keys.py  test_casting.py  test_cold_start.py  test_cold_start_api.py  test_context.py  test_cost_planner.py  test_e2e.py  test_e2e_real_backends.py  test_export.py  test_export_api.py  test_golden_regression.py  test_harness.py  test_invalidation.py  test_koodo.py  test_llm_adaptation.py  test_llm_gateway.py  test_mvp_smoke.py  test_orchestration.py  test_orchestrator.py  test_packaging.py  test_pipeline_package.py  test_planner.py  test_preflight.py  test_prompts.py  test_pronunciation.py  test_render.py  test_scanner.py  test_scanner_harness.py  test_scene_state.py  test_schema_export.py  test_segmenter.py  test_station.py  test_store.py  (+3 more)
vn_core/: __init__.py  pipeline.py  scene_state.py
vn_server/: __init__.py  __main__.py
web_reader/: AGENTS.md  index.html  package-lock.json  package.json  vite.config.ts
(+93 files in other folders)
