[project]
name = "vn-core"
version = "0.1.0"
description = "AI multi-role audiobook system core"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "edge-tts>=6.1.9",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
    "mypy>=1.10",
]
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "real_tts: tests that require a real TTS backend (CosyVoice, Edge-TTS)",
    "real_llm: tests that require a real LLM backend (OpenAI, DeepSeek, Claude)",
]

[tool.setuptools.packages.find]
include = ["vn_core*", "vn_server*", "integrations*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
